[gd_scene load_steps=22 format=4 uid="uid://b5khbek0fxki0"]

[ext_resource type="Script" path="res://game_view.gd" id="1_6hfh6"]
[ext_resource type="PackedScene" uid="uid://bj451436lnaqo" path="res://rails.tscn" id="1_rrse5"]
[ext_resource type="Texture2D" uid="uid://eij2hohstuhh" path="res://images/background.png" id="2_g1875"]

[sub_resource type="Animation" id="Animation_r1erm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ybkoo"]
resource_name = "fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.5),
"transitions": PackedFloat32Array(1, 0.101532, 0.353554),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xll60"]
_data = {
"RESET": SubResource("Animation_r1erm"),
"fade_out": SubResource("Animation_ybkoo")
}

[sub_resource type="Animation" id="Animation_215vd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.67451, 0.196078, 0.196078, 1)]
}

[sub_resource type="Animation" id="Animation_ggm76"]
resource_name = "rainbow"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.67451, 0.196078, 0.196078, 1), Color(0.87451, 0.443137, 0.14902, 1), Color(0.984314, 0.823529, 0.211765, 1), Color(0.415686, 0.745098, 0.196078, 1), Color(0.356863, 0.431373, 0.882353, 1), Color(0.462745, 0.258824, 0.541176, 1), Color(0.67451, 0.196078, 0.196078, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4him0"]
_data = {
"RESET": SubResource("Animation_215vd"),
"rainbow": SubResource("Animation_ggm76")
}

[sub_resource type="Animation" id="Animation_b7km5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bhpc2"]
resource_name = "changed"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d0jt8"]
_data = {
"RESET": SubResource("Animation_b7km5"),
"changed": SubResource("Animation_bhpc2")
}

[sub_resource type="Animation" id="Animation_plniq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0m12q"]
resource_name = "changed"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0.584, 0.73, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y681f"]
_data = {
"RESET": SubResource("Animation_plniq"),
"changed": SubResource("Animation_0m12q")
}

[sub_resource type="Animation" id="Animation_m1u77"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_sbrcx"]
resource_name = "changed"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.67451, 0.196078, 0.196078, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7gscs"]
_data = {
"RESET": SubResource("Animation_m1u77"),
"changed": SubResource("Animation_sbrcx")
}

[sub_resource type="Animation" id="Animation_mqv32"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_a1wuf"]
resource_name = "activated"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.67451, 0.196078, 0.196078, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yvdyt"]
_data = {
"RESET": SubResource("Animation_mqv32"),
"activated": SubResource("Animation_a1wuf")
}

[node name="GameView" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6hfh6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_g1875")
centered = false

[node name="Container" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(1024, 384)
layout_mode = 2

[node name="Rails" parent="Container" instance=ExtResource("1_rrse5")]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAAAAAAAAAAEAAAAAAABAAAAAAAEAAAAAAACAAAAAAAEAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAEAAAAAAAFAAAAAAAEAAAAAAAGAAEAAAAEAAAAAAAHAAEAAAAEAAAAAAAHAAAAAAAEAAAAAAAIAAAAAAAEAAAAAAAJAAAAAAABAAAAAAAGAAAAAAACAAMAAAAAAAEAAAAEAAAAAAABAAEAAAAEAAAAAAACAAEAAAAEAAAAAAADAAEAAAAEAAAAAAAEAAEAAAAAAAAAAAAFAAEAAAAEAAAAAAAJAAEAAAAEAAAAAAAKAAEAAAAEAAAAAAAKAAAAAAAEAAAAAAALAAAAAAAEAAAAAAALAAEAAAAEAAAAAAAIAAEAAAAEAAAAAAAAAAIAAAAEAAAAAAABAAIAAAAEAAAAAAACAAIAAAAEAAAAAAADAAIAAAAEAAAAAAAEAAIAAAAEAAAAAAAFAAIAAAAEAAAAAAAGAAIAAAAEAAAAAAAHAAIAAAAEAAAAAAAIAAIAAAAEAAAAAAAJAAIAAAAAAAAAAAAKAAIAAAADAAUAAAALAAIAAAACAAAAAAALAAMAAAAEAAAAAAAKAAMAAAABAAAAAAAJAAMAAAAEAAAAAAAIAAMAAAAEAAAAAAAHAAMAAAADAAAAAAAGAAMAAAAEAAAAAAAFAAMAAAAEAAAAAAAEAAMAAAAEAAAAAAADAAMAAAAEAAAAAAACAAMAAAADAAAAAAABAAMAAAAEAAAAAAAAAAMAAAAEAAAAAAAAAAQAAAAEAAAAAAABAAQAAAAEAAAAAAACAAQAAAAAAAMAAAADAAQAAAAEAAAAAAAEAAQAAAAEAAAAAAAFAAQAAAAEAAAAAAAGAAQAAAADAAAAAAAHAAQAAAAEAAAAAAAIAAQAAAAEAAAAAAAJAAQAAAAEAAAAAAAKAAQAAAAEAAAAAAALAAQAAAABAAAAAAAMAAAAAAAEAAAAAAANAAAAAAAEAAAAAAAMAAEAAAAEAAAAAAANAAEAAAADAAAAAAAMAAIAAAAEAAAAAAANAAIAAAAEAAAAAAAMAAMAAAAEAAAAAAANAAMAAAAEAAAAAAANAAQAAAAEAAAAAAAMAAQAAAAEAAAAAAAOAAAAAAAEAAAAAAAPAAAAAAAAAAIAAAAPAAEAAAABAAIAAAAPAAIAAAACAAIAAAAPAAMAAAADAAIAAAAOAAMAAAAEAAAAAAAOAAQAAAAEAAAAAAAOAAIAAAAEAAAAAAAOAAEAAAAEAAAAAAAPAAQAAAAEAAIAAAAAAAUAAAAEAAAAAAABAAUAAAAEAAAAAAACAAUAAAAEAAAAAAADAAUAAAAEAAAAAAAEAAUAAAACAAAAAAAFAAUAAAAEAAAAAAAGAAUAAAAEAAAAAAAHAAUAAAAEAAAAAAAIAAUAAAAEAAAAAAAJAAUAAAAEAAAAAAAKAAUAAAAEAAAAAAALAAUAAAAEAAAAAAAMAAUAAAAEAAAAAAANAAUAAAAEAAAAAAAOAAUAAAAEAAAAAAAPAAUAAAAFAAIAAAA=")

[node name="Countdown" type="Control" parent="Container"]
modulate = Color(1, 1, 1, 0.729412)
layout_mode = 2

[node name="CountdownLabel0" type="Label" parent="Container/Countdown"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -57.0
offset_top = -136.0
offset_right = 57.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.415686, 0.745098, 0.196078, 1)
theme_override_font_sizes/font_size = 200
text = "GO"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Container/Countdown/CountdownLabel0"]
libraries = {
"": SubResource("AnimationLibrary_xll60")
}

[node name="CountdownLabel1" type="Label" parent="Container/Countdown"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -57.0
offset_top = -136.0
offset_right = 57.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_font_sizes/font_size = 200
text = "1"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Container/Countdown/CountdownLabel1"]
libraries = {
"": SubResource("AnimationLibrary_xll60")
}

[node name="CountdownLabel2" type="Label" parent="Container/Countdown"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -57.0
offset_top = -136.0
offset_right = 57.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.87451, 0.443137, 0.14902, 1)
theme_override_font_sizes/font_size = 200
text = "2"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Container/Countdown/CountdownLabel2"]
libraries = {
"": SubResource("AnimationLibrary_xll60")
}

[node name="CountdownLabel3" type="Label" parent="Container/Countdown"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -57.0
offset_top = -136.0
offset_right = 57.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.67451, 0.196078, 0.196078, 1)
theme_override_font_sizes/font_size = 200
text = "3"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Container/Countdown/CountdownLabel3"]
libraries = {
"": SubResource("AnimationLibrary_xll60")
}

[node name="GameOverDisplay" type="Control" parent="Container"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.768627)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Container/GameOverDisplay"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Container/GameOverDisplay/VBoxContainer"]
clip_contents = true
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Ende!"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="Container/GameOverDisplay/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.67451, 0.196078, 0.196078, 1)
theme_override_font_sizes/font_size = 100
text = "200 Punkte"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Container/GameOverDisplay/VBoxContainer/FinalScoreLabel"]
libraries = {
"": SubResource("AnimationLibrary_4him0")
}

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "TRAINS"

[node name="TrainCountLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer/VBoxContainer/HBoxContainer/TrainCountLabel"]
libraries = {
"": SubResource("AnimationLibrary_d0jt8")
}

[node name="VSeparator" type="VSeparator" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "SCORE"

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer/VBoxContainer/HBoxContainer/ScoreLabel"]
libraries = {
"": SubResource("AnimationLibrary_y681f")
}

[node name="VSeparator2" type="VSeparator" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "ERRORS"

[node name="ErrorsLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer/VBoxContainer/HBoxContainer/ErrorsLabel"]
libraries = {
"": SubResource("AnimationLibrary_7gscs")
}

[node name="VSeparator3" type="VSeparator" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VSeparator5" type="VSeparator" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "TIME"

[node name="TimeLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="Timer" type="Timer" parent="CenterContainer/VBoxContainer/HBoxContainer/TimeLabel"]
autostart = true

[node name="VSeparator4" type="VSeparator" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PauseButtons" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AutoBrakeCheckBox" type="CheckBox" parent="CenterContainer/VBoxContainer/PauseButtons"]
layout_mode = 2
text = "AUTO_STOP"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer/VBoxContainer/PauseButtons/AutoBrakeCheckBox"]
libraries = {
"": SubResource("AnimationLibrary_yvdyt")
}

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="MenuContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
text = "RESTART_GAME"

[node name="DifficultySettingsButton" type="Button" parent="CenterContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
text = "MAIN_MENU"

[node name="HighscoreControls" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MenuContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PlayerNameEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/MenuContainer/HighscoreControls"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "NAME_PLACEHOLDER"

[node name="ChildSubmitButton" type="Button" parent="CenterContainer/VBoxContainer/MenuContainer/HighscoreControls"]
layout_mode = 2
text = "AGE_0"

[node name="PupilSubmitButton" type="Button" parent="CenterContainer/VBoxContainer/MenuContainer/HighscoreControls"]
layout_mode = 2
text = "AGE_1"

[node name="AdultSubmitButton" type="Button" parent="CenterContainer/VBoxContainer/MenuContainer/HighscoreControls"]
layout_mode = 2
text = "AGE_2"

[connection signal="end" from="Container/Rails" to="." method="_on_rails_end"]
[connection signal="errored" from="Container/Rails" to="." method="_on_rails_errored"]
[connection signal="scored" from="Container/Rails" to="." method="_on_rails_scored"]
[connection signal="train_started" from="Container/Rails" to="." method="_on_rails_train_started"]
[connection signal="timeout" from="CenterContainer/VBoxContainer/HBoxContainer/TimeLabel/Timer" to="." method="_on_timer_timeout"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/PauseButtons/AutoBrakeCheckBox" to="." method="_on_auto_brake_check_box_toggled"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuContainer/DifficultySettingsButton" to="." method="_on_difficulty_settings_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuContainer/HighscoreControls/ChildSubmitButton" to="." method="_on_highscore_submit_button_pressed" binds= ["0-5"]]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuContainer/HighscoreControls/PupilSubmitButton" to="." method="_on_highscore_submit_button_pressed" binds= ["6-12"]]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuContainer/HighscoreControls/AdultSubmitButton" to="." method="_on_highscore_submit_button_pressed" binds= ["13+"]]
